<resources>
    <string name="app_name">Lector Keroyume</string>
    <string name="open_nav">Open Navegacion String</string>
    <string name="close_nav">Close Navegacion String</string>
    <string name="us">Sobre Nosotros</string>
    <string name="settings">Ajustes</string>
    <string name="favorites">Favoritos</string>
    <string name="principal">Pagina Principal</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="user">@string/user</string>
    <string name="welcome">Bienvenido</string>
    <string name="test">Se agrega solo como test</string>
    <string name="mail">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>