<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/user_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/sucursales"
            app:key="reply"
            app:title="@string/retiro"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Language Preferences">

        <ListPreference
            app:key="language"
            app:title="Language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="es" />

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="Notifiones Activas" />

        <SwitchPreferenceCompat
            app:key="vibration"
            app:title="Vibración" />

        <SwitchPreferenceCompat
            app:key="imageneshd"
            app:title="Imagenes en alta calidad" />

    </PreferenceCategory>

</PreferenceScreen>
