<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/keroyumeblue"
    android:gravity="center">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/keroyumedarkblue"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColorHint="#666666" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:hint="@string/password"
        android:layout_marginBottom="30dp"
        android:background="@color/keroyumedarkblue"
        android:inputType="textPassword"
        android:textColorHint="#666666"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>
